Change auth to bearer
